# devspaces-mono

./: MODULE.bazel
codespaces/backend/nodejs-services/auth-service/: Dockerfile  package-lock.json  package.json  report.html  report.json  test.yml
codespaces/backend/nodejs-services/auth-service/src/: app.js  index.js
codespaces/backend/nodejs-services/auth-service/src/config/: RabbitMQ.js  env.config.js
codespaces/backend/nodejs-services/auth-service/src/controllers/: user.controllers.js
codespaces/backend/nodejs-services/auth-service/src/middlewares/: auth.middleware.js
codespaces/backend/nodejs-services/auth-service/src/models/: temp.js  user.model.js
codespaces/backend/nodejs-services/auth-service/src/repositories/: user.repositories.js
codespaces/backend/nodejs-services/auth-service/src/routes/: user.routes.js
codespaces/backend/nodejs-services/auth-service/src/services/: token.services.js  user.services.js
codespaces/backend/nodejs-services/auth-service/src/utils/: ApiError.js  jwt.js
codespaces/backend/nodejs-services/registration-service/: BUILD.bazel  package.json  skaffold.yaml
codespaces/backend/nodejs-services/registration-service/k8s/: deployments.yaml
codespaces/backend/nodejs-services/registration-service/src/models/: user.model.js
codespaces/backend/nodejs-services/registration-service/src/services/: user.services.js
codespaces/backend/nodejs-services/user-service/: .gitignore  docker-compose.yml  package-lock.json  package.json
codespaces/backend/nodejs-services/user-service/src/: app.js  index.js
(+14 files in other folders)
